# cpp-project-template

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  ReadMe.md  clang-tidy-cache  clang-tidy-wrapper  conanfile.txt  run-clang-format.sh  run-clang-tidy.py  run-clang-tidy.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  install-prerequisites.sh
profiles/: ubuntu-22.04.clang.release.conan-profile
src/: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
src/example/: CMakeLists.txt  main.cpp
